css/style.css
body {
  margin: 0;
  padding: 0;
}

.main-container {
  height: 100vh;
  max-height: 1605px;
  min-width: 1000px;
  display: flex;
  flex-direction: column-reverse;
}

article {
  box-sizing: border-box;
  flex-grow: 1;
  min-height: 500px;
  width: 100%;
  max-width: 1440px;
  min-width: 1000px;
  margin: 0 auto;
  background-image: url(../assets/your_verse_hero.jpg);
  background-size: 1440px 1315px;
  background-position: bottom;
  background-repeat: no-repeat;
}

aside {
  box-sizing: border-box;
  min-height: 200px;
  width: 100%;
  max-width: 1440px;
  min-width: 1000px;
  margin: 0 auto;
  display: flex;
}

.promo-box-1 {
  box-sizing: border-box;
  position: relative;
  width: 360px;
  margin: 2px;
  background-image: url("../assets/promo_iphone5s.jpg");
  background-position: top;
  background-size: 360px 200px;
}

.promo-box-2 {
  box-sizing: border-box;
  position: relative;
  width: 360px;
  margin: 2px;
  background-image: url("../assets/promo_iphone5c.jpg");
  background-position: top;
  background-size: 360px 200px;
}

.promo-box-3 {
  box-sizing: border-box;
  position: relative;
  width: 360px;
  margin: 2px;
  background-image: url("../assets/promo_30_years.jpg");
  background-position: top;
  background-size: 360px 200px;
}

.promo-box-4 {
  box-sizing: border-box;
  position: relative;
  width: 360px;
  margin: 2px;
  background-image: url("../assets/promo_supplier_responsibility.jpg");
  background-position: top;
  background-size: 360px 200px;
}

nav img {
  margin: 3px 0;
}

footer {
  box-sizing: border-box;
  min-height: 90px;
  width: 980px;
  margin: 0 auto;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', Verdana, sans-serif;
  font-size: 10px;
  color: #333;
}

.footer-left {
  position: relative;
  top: 20px;
  float: left;
}

.footer-right {
  position: relative;
  top: 28px;
  float: right;
}

.footer-right img {
  vertical-align: middle;
}

footer a {
  color: #08c;
  text-decoration: none;
}

.footer-link {
  border-right: solid 1px #777;
  margin-right: 6px;
  padding-right: 6px;
}

nav {
  position: absolute;
  display: flex;
  top: 83px;
  left: 50%;
  margin-left: -490px;
  border-radius: 4px;
  height: 36px;
  width: 980px;
  box-shadow: #888 0 1px 2px;
  background-image:
    linear-gradient(
      rgba(0, 0, 0, 0.2) 0%,
      rgba(0, 0, 0, 0) 5%,
      rgba(0, 0, 0, 0) 97%,
      rgba(0, 0, 0, 0.45) 100%
    ),
    url("../assets/nav-background.png"),
    linear-gradient(#666 0%, #5e5e5e 50%, #707070 51%, #808080 100%);
  text-align: center;
}

nav a {
  max-width: 105px;
  min-width: 65px;
  border-image: url("../assets/nav-border.png") 0 2 0 1;
  border-width: 0 2px 0 1px;
  border-style: solid;
  flex-grow: 1;
}

nav a:hover {
  border-radius: 4px;
  background-image:
    radial-gradient(rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0) 95%, rgba(0, 0, 0, 0) 100%),
    linear-gradient(#666 0%, #5e5e5e 50%, #707070 51%, #808080 100%);
}

.search-box {
  width: 100px;
  height: 20px;
  margin: 8px 20px;
  display: flex;
  border-radius: 12px;
  box-shadow: 0 2px 1px #444 inset, 0 1px 0 #aaa;
  background-color: rgba(255, 255, 255, 0.1);
  flex-grow: 1;
  transition: all 0.5s;
}

.search-box input {
  height: 14px;
  width: 70px;
  border: none;
  background: none;
  margin-top: 3px;
  font-size: 12px;
}

.search-box i {
  font-size: 12px;
  padding: 4px;
  color: #eee;
  text-shadow: 1px 1px #444;
}

.search-box input:focus {
  width: 120px;
}

.search-box:focus-within {
  width: 160px;
  background: #eee;
  box-shadow: 0 2px 1px #444 inset;
}

.search-box:focus-within i {
  color: #888;
}

h1 {
  position: relative;
  width: 980px;
  height: 104px;
  top: 190px;
  margin: 0 auto;
}

h2 {
  position: relative;
  width: 980px;
  height: 82px;
  top: 180px;
  margin: 0 auto;
}

h3 {
  position: relative;
  width: 980px;
  height: 32px;
  overflow: hidden;
  top: 210px;
  margin: 0 auto;
  display: flex;
}

h3:hover {
  top: 214px;
  align-items: flex-end;
}

